--- a/W6, Practicing functions.Rmd
+++ b/W6, Practicing functions.Rmd
@@ -14,7 +14,7 @@ pacman::p_load(tidyverse, gapminder)
 gapminder <- gapminder
 ```
 
-1. Define a defensive function that calculates the Gross Domestic Product of a nation from the data available in the gapminder dataset. Using that function, calculate the GDP of Denmark in the following years: 1967, 1977, 1987, 1997, 2007, and 2017.
+Define a defensive function that calculates the Gross Domestic Product of a nation from the data available in the gapminder dataset. Using that function, calculate the GDP of Denmark in the following years: 1967, 1977, 1987, 1997, 2007, and 2017.
 ```{r}
 # Defining function
 gdp_nation_calc <- function(data, year = NULL, country = NULL){
@@ -39,7 +39,7 @@ gdp_nation_calc <- function(data, year = NULL, country = NULL){
 gdp_nation_calc(data = gapminder, year = c(1967, 1977, 1987, 1997, 2007, 2017), country = "Denmark")
 ```
 
-2. Write a script that loops over each country in the gapminder dataset, tests whether the country starts with a ‘B’ , and print out whether the life expectancy is smaller than 50, between 50 and 70, or greater than 70.
+Write a script that loops over each country in the gapminder dataset, tests whether the country starts with a ‘B’ , and print out whether the life expectancy is smaller than 50, between 50 and 70, or greater than 70.
 ```{r}
 # countries starting with B
 b_countries <- grep("^B", unique(gapminder$country), value=TRUE)
@@ -66,4 +66,4 @@ for (country in unique(gapminder$country)){
 }
 ```
 
-3. Optional: Write a script that loops over each country in the gapminder dataset, tests whether the country starts with a ‘M’ and graphs life expectancy against time (using plot() function) as a line graph if the mean life expectancy is under 50 years.
+Optional: Write a script that loops over each country in the gapminder dataset, tests whether the country starts with a ‘M’ and graphs life expectancy against time (using plot() function) as a line graph if the mean life expectancy is under 50 years.
